--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
             <h2>Get In Touch</h2>
             <h3>If you need someone with a passion for programming.</h3>
             <p>I'm open to all kinds of programming related opportunities and love learning new technologies to achieve
-                our goal.</p>
-            <a class="btn" href="mailto:u17200068@sharjah.ac.ae">CONTACT ME</a>
+                my goals.</p>
+            <br>
+            <br>
+            <a class="btn" href="mailto:u17200068@sharjah.ac.ae">Contact Me</a>
         </div>
     </div>
 
