--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <body>
     <div class="topcontainer">
-        <img class="topcloud" src="images/cloud.png" alt="cloudimg">
+        <img class="topcloud" src="Images/cloud.png" alt="cloudimg">
         <h1>I'm Madyan</h1>
         <h2>a developer.</h2>
-        <img class="bottomcloud" src="images/cloud.png" alt="cloudimg">
-        <img src="images/mountain.png" alt="mountainimg">
+        <img class="bottomcloud" src="Images/cloud.png" alt="cloudimg">
+        <img src="Images/mountain.png" alt="mountainimg">
     </div>
 
     <div class="middle-container">
