--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <body>
     <div class="topcontainer">
-        <img class="topcloud" src="Images/cloud.png" alt="cloudimg">
+        <img class="topcloud" src="Images/cloud.png" alt="cloudimg" oncontextmenu="return false;">
         <h1>I'm Madyan</h1>
         <h2>a developer.</h2>
         <img class="bottomcloud" src="Images/cloud.png" alt="cloudimg">
-        <img src="Images/mountain.png" alt="mountainimg">
+        <img src="Images/mountain.png" alt="mountainimg" oncontextmenu="return false;">
     </div>
 
     <div class="middle-container">
