--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <img src="Images/madyan.png" width="250px" alt="madyanpic">
             <h2>About Me.</h2>
             <p>My name is Madyan, and I am currently a student at University of Sharjah. My degree is in IT Multimedia
-                and I hope to graduate by the end of 2022, my current interest is in Web development, Software
-                Development and Computer graphics. I also enjoy playing several sports such as: Volleyball and Football.
+                and I hope to graduate by the end of 2022, my current interests include: Web Development, Desktop Application Development, Game Development,
+                Data Structures & Algorithms and Artificial Intelligence. I also enjoy playing several sports such as: Volleyball and Football.
             </p>
         </div>
         <hr>
