--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div class="profile">
             <img src="Images/madyan.png" width="250px" alt="madyanpic">
             <h2>About Me.</h2>
-            <p>My name is Madyan, and I am currently a student at University of Sharjah. My degree is in IT Multimedia
+            <p><center>My name is Madyan, and I am currently a student at University of Sharjah. My degree is in IT Multimedia
                 and I hope to graduate by the end of 2022, my current interests include: Web Development, Desktop Application Development, Game Development,
-                Data Structures & Algorithms and Artificial Intelligence. I also enjoy playing several sports such as: Volleyball and Football.
+                Data Structures & Algorithms and Artificial Intelligence. I also enjoy playing several sports such as: Volleyball and Football.</center>
             </p>
         </div>
         <hr>
