--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div class="profile">
             <img src="Images/madyan.png" width="250px" alt="madyanpic">
             <h2>About Me.</h2>
-            <p><center>My name is Madyan, and I am currently a student at University of Sharjah. My degree is in IT Multimedia
+            <p>My name is Madyan, and I am currently a student at University of Sharjah. My degree is in IT Multimedia
                 and I hope to graduate by the end of 2022, my current interests include: Web Development, Desktop Application Development, Game Development,
-                Data Structures & Algorithms and Artificial Intelligence. I also enjoy playing several sports such as: Volleyball and Football.</center>
+                Data Structures & Algorithms and Artificial Intelligence. I also enjoy playing several sports such as: Volleyball and Football.
             </p>
         </div>
         <hr>
@@ -42,7 +42,7 @@
                 <p>I enjoy programming and developing software for Mobile, Web and VR
                     platforms. I also like
                     researching different algorithms and data structures to apply to my
-                    projects. I have created several projects such as: Furniture AR Shop, Sorting Algorithm visualizer,
+                    projects. I have created several projects such as: Furniture AR Shop, Pathfinder visualizer,
                     E-commerce Web Application etc.</p>
             </div>
             <div class="skill-row">
